fix(igxGrid/igxFor): Fix scrollbars get clipped when zoomed #1207

--- a/src/core/styles/components/_common/_igx-vhelper.scss
+++ b/src/core/styles/components/_common/_igx-vhelper.scss
@@ -6,7 +6,6 @@
 
 %vhelper--vertical {
     position: absolute;
-    width: 18px;
     top: 0;
     right: 0;
 }
